src/objects/Search_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Additional_Fields_To_Query__c</fullName>
        <inlineHelpText>These are the additional fields which are not used in searching but needed in JSON, So required to query.</inlineHelpText>
        <label>Additional Fields To Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Info_To_Display__c</fullName>
        <inlineHelpText>Field API name list for object to show Additional info which is shown on Search Result</inlineHelpText>
        <label>Additional Info To Display</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Field_Name__c</fullName>
        <inlineHelpText>This is API Name of field which is shown as main Info of searching result.</inlineHelpText>
        <label>Display Field Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Where_Clause__c</fullName>
        <inlineHelpText>Fixed where clause which should be always applied for that object. Should be written in SOQL syntax.</inlineHelpText>
        <label>Fixed Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Special_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is used to avoid searching records from STA and global search if set to true.</description>
        <label>Is Special Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Object Priority order.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Searchable_Field_Set__c</fullName>
        <inlineHelpText>Field API name separated by comma(,) on which searching needs to apply.</inlineHelpText>
        <label>Searchable Field Set</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Search Configuration</label>
    <listViews>
        <fullName>All_Settings</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>Order__c</columns>
        <columns>Display_Field_Name__c</columns>
        <columns>Fixed_Where_Clause__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Settings</label>
    </listViews>
    <pluralLabel>Search Configurations</pluralLabel>
</CustomObject>